--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="IMAGES/logo.png" class="logo">
+            <img src="logo.png" class="logo">
             <ul id="sidemenu">
               <li><a href="#header">Home</a></li>
               <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="IMAGES/WhatsApp Image 2023-10-20 at 11.06.03_40c1777a.jpg">
+                <img src="WhatsApp Image 2023-10-20 at 11.06.03_40c1777a.jpg">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -97,7 +97,7 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
             <div class="work">
-                <img src="IMAGES/calculator-cal.jpeg">
+                <img src="calculator-cal.jpeg">
                 <div class="layer">
                     <h3>Calculator App</h3>
                     <p>Basic calculators are designed for simple arithmetic operations like addition, subtraction, multiplication, and division. They are handy for everyday calculations and often feature a compact and portable design.</p>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="IMAGES/phone1.jpg">
+                <img src="phone1.jpg">
                 <div class="layer">
                     <h3>Music App</h3>
                     <p>The app connects you to the people around the world.
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="IMAGES/phone1.jpg">
+                <img src="phone1.jpg">
                 <div class="layer">
                     <h3>Online shopping App</h3>
                     <p>The app connects you to the people around the world.
@@ -141,7 +141,7 @@
                     <a href="https://instagram.com/wazid.__?igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/shaik-vazid-63a456293?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <a href="IMAGES/WhatsApp Image 2023-10-20 at 11.06.03_40c1777a.jpg" download class="btn btn2">Download Resume</a>
+                <a href="WhatsApp Image 2023-10-20 at 11.06.03_40c1777a.jpg" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
